syntax = "proto3";

option java_package = "ru.vizbash.grapevine.storage";

message StoredProfile {
  uint64 node_id = 1;
  string username = 2;
  bytes public_key = 3;
  bytes private_key_enc = 4;
  bytes has_photo = 5;
  bytes photo = 6;
}